package eapli.ecourse.coursemanagement.domain;

public enum CourseState {
  CLOSED, OPEN, ENROLL, IN_PROGRESS, FINISHED
}
