package eapli.ecourse.enrolmentmanagement.domain;

public enum EnrolmentState {
  PENDING, ACCEPTED, REJECTED

}
