@startuml US1003_DM
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Course" {
  entity Course

  class Title
  class CourseState
  class EnrolmentState

  class EnrolmentLimits
  class Description

  class Code
}

class Description <<(V,#FF8B40) value object>> {}
class EnrolmentLimits <<(V,#FF8B40) value object>> {
  - min
  - max
}

package "<<aggregate>> Enrolment" {
  entity Enrolment
}

entity Course <<entity>> <<root>> {
  - createdAt
}

entity Enrolment <<entity>> <<root>> {
}

package "<<aggregate>> Teacher" {
  entity Teacher
}

entity Teacher <<entity>> <<root>> {
}

note bottom of CourseState : CLOSED\nOPEN\nIN_PROGRESS\nFINISHED
note bottom of EnrolmentState : CLOSED\nOPEN

class Title <<(V,#FF8B40) value object>> {}
class EnrolmentState <<(V,#FF8B40) value object>> {}
class CourseState <<(V,#FF8B40) value object>> {}
class Code <<(V,#FF8B40) value object>> {}

Course --> "1" Title : is titled
Course ---> "1..*" Teacher : has
Course --> "1" Teacher : has a responsible
Course --> "1" CourseState : is in
Course --> "1" EnrolmentState : is in
Course --> "1" Description : has
Course --> "1" EnrolmentLimits : has
Course --> "1" Code : is identified by

Enrolment --> "1" Course : is for

@enduml
